--- a/index.html
+++ b/index.html
@@ -10,15 +10,30 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="backdrop hidden">
+        <div class="modal inf">
+            <h2 class="inf-title">Donate</h2>
+            <ul>
+                <li>
+                    <p>CARD</p>
+                    <input class="inf" type="text">
+                </li>
+                <li>
+                    <p>KODE</p>
+                    <input class="inf" type="text">
+                </li>
+            </ul>
+        </div>
+    </div>
     <section class="section">
         <div class="container">
             <div class="hero-inf inf">
                 <h1 class="hero-title">Save the forest·</h1>
                 <p class="hero-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                 <button type="button" class="inf-button">
-                    <a href="">
+                    <p href="">
                         Donate
-                    </a>
+                    </p>
                 </button>
             </div>
         </div>
@@ -29,26 +44,26 @@
                 <h2 class="inf-title">Information</h2>
                 <ul class="inf-list">
                     <li class="inf-item">
-                        <div class="inf-item-container">
+                        <button class="container">
                             <h3 class="inf-item-title">
                                 Proof
                             </h3>
-                            <p class="inf-item-text">
+                            <p class="text">
                                 Here you can make sure that the money is  spent exclusively to the new car.
                             </p>
-                        </div>
+                        </button>
                     </li>
                     <li class="inf-item">
-                        <div class="inf-item-container">
+                        <button class="container">
                             <h3 class="inf-item-title">
                                 Contacts
                             </h3>
-                            <p class="inf-item-text">
+                            <p class="text">
                                 <a href="">tel:+38 055 123 13 12</a>
                                 <a href="">mail:bobic@gmail.com</a>
                                 <a href="">Inst:@TR.SvFrst-468</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                 </ul>
             </div>
