--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <input class="inf" type="text">
                 </li>
                 <li>
-                    <p>KODE</p>
+                    <p>CODE</p>
                     <input class="inf" type="text">
                 </li>
             </ul>
@@ -44,7 +44,7 @@
                 <h2 class="inf-title">Information</h2>
                 <ul class="inf-list">
                     <li class="inf-item">
-                        <button class="container">
+                        <button class="cock container">
                             <h3 class="inf-item-title">
                                 Proof
                             </h3>
@@ -54,7 +54,7 @@
                         </button>
                     </li>
                     <li class="inf-item">
-                        <button class="container">
+                        <button class="cock container">
                             <h3 class="inf-item-title">
                                 Contacts
                             </h3>
