--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="backdrop hidden">
         <div class="modal inf">
-            <h2 class="inf-title">Donate</h2>
+            <h2>Donate</h2>
             <ul>
                 <li>
                     <p>CARD</p>
@@ -35,7 +35,6 @@
                         Donate
                     </p>
                 </button>
-            </div>
         </div>
     </section>
     <section class="section">
